# Halo2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hardhat.config.ts  package-lock.json  package.json
cmake/: config.cmake.in  functions.cmake  install.cmake
cmake/toolchain/: cxx17.cmake
contracts/homomorphic/: homomorphic-paillier.sol
src/: CMakeLists.txt  logger.cpp  logger.hpp  pallas.cpp  pch.h  xorwow.cpp  xorwow.h
src/gadgets/: poseidon.hpp  utilities.cpp  utilities.hpp
src/gadgets/poseidon/: '  primitives.hpp
src/gadgets/utilities/: condswap.cpp  condswap.hpp  decompose_running_sum.cpp  decompose_running_sum.hpp  lookup_range_check.cpp  lookup_range_check.hpp
src/homomorphic/: cipher_text.h  paillier_crypto_system.cpp  paillier_crypto_system.h  private_key.h  public_key.h
test/: CMakeLists.txt  paillier_test.cpp  pch.h  xorwow_test.cpp
